fix: colors of onboarding survey in dark mode (#17422)

--- a/airbyte-webapp/src/pages/OnboardingPage/OnboardingSurvey/OnboardingMultiselect.module.scss
+++ b/airbyte-webapp/src/pages/OnboardingPage/OnboardingSurvey/OnboardingMultiselect.module.scss
@@ -4,7 +4,7 @@
 .multiSelect__button {
   width: 100%;
   padding: variables.$spacing-md;
-  background-color: colors.$white;
+  background-color: colors.$foreground;
   border: variables.$border-thin solid colors.$grey-200;
   border-radius: variables.$border-radius-md;
   text-align: left;
