--- a/airbyte-webapp/src/pages/OnboardingPage/OnboardingSurvey/OnboardingSurvey.module.scss
+++ b/airbyte-webapp/src/pages/OnboardingPage/OnboardingSurvey/OnboardingSurvey.module.scss
@@ -5,7 +5,7 @@
   width: 450px;
   margin: 0 auto;
   padding: variables.$spacing-xl;
-  background: colors.$white;
+  background: colors.$foreground;
   border-radius: variables.$border-radius-lg;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 8%);
 }
